@@ -4,6 +4,9 @@ ExtDir=
 Language=
 OutDir=
 UseLongRegHead=0
+OutSeparateObjs=0
+OutMaxBinaryBytes=0
+DontDisplayInfoAfterShot=0
 
 [SkipRegKey]
 0=
